kubernetes/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: media-stack
